GRAAL: build changes